app/frontend/assets/styles/components/_modal.scss
dialog {
    max-height: calc(100% - 60px);
    border-style: none;
    padding: 0;
    align-items: center;
    width: 90%;
    max-width: map-get($container-max-widths, lg);
    opacity: 0;
    box-shadow: 0 0 0 100vw rgba(0, 0, 0, 0);
    overflow: auto;
    box-sizing: border-box;
    transition:
        box-shadow $transition-duration-default $transition-ease-default,
        opacity $transition-duration-default $transition-ease-default;

    &.fade-in {
        opacity: 1;
        transition:
            box-shadow $transition-duration-default $transition-ease-default,
            opacity $transition-duration-default $transition-ease-default;
        box-shadow: 0 0 0 100vw rgba(0, 0, 0, 0.4);
    }

    .btn-close {
        z-index: 500;
        &:focus-visible {
            outline-width: thin !important;
        }
    }

    z-index: 2500;

    &:has(.wrapper-sticky-footer) {
        height: 100%;

        .modal-body {
            display: flex;
            flex: 1 0 auto;
            flex-direction: column;
            section {
                display: flex;
                flex: 1 0 auto;
                flex-direction: column;

                form {
                    display: flex;
                    flex: 1 0 auto;
                    flex-direction: column;

                    .wrapper-sticky-footer {
                        flex: 1 0 auto;
                    }
                }
            }
        }
    }
}
::backdrop {
    position: relative;
    background-color: transparent;
    z-index: 2400;
}

@mixin bodyModal {
    overflow: hidden;
    padding-right: 0;
}

@mixin modalVisible {
    opacity: 1;
    visibility: visible;
    backdrop-filter: blur(10px);

    &.modal-right {
        .modal-content {
            right: 0;
        }
    }

    .modal-backdrop {
        visibility: visible;
        opacity: 0.5;
    }
}

body.show-modal {
    @include bodyModal();

    .modal.show {
        @include modalVisible();
    }
}

body.show-modal--first-filter {
    .modal--first-filter {
        @include modalVisible();
    }
}

.modal {
    position: fixed;
    width: 100%;
    height: 100%;
    opacity: 0;
    visibility: hidden;
    transition: all 0.5s ease;
    top: 0;
    left: 0;
    overflow-x: hidden;
    overflow-y: auto;
    z-index: 2100;

    &-dialog-container {
        align-items: center;
        height: 97vh;
        overflow-y: auto;
        box-sizing: border-box;
    }
    &-dialog {
        display: flex;
        align-items: center;
        min-height: calc(100% - 3rem);
        position: relative;
        width: 90%;
        max-width: map-get($container-max-widths, lg);
        margin: 1.5rem auto;

        &--small {
            max-width: map-get($container-max-widths, md);
        }
        &--wide {
            max-width: map-get($container-max-widths, xxxl);
        }
        &--full {
            max-width: none;
            width: 98%;
            height: 98%;
            margin: 0.5% auto;
            max-height: none;

            .modal-content {
                height: 100%;
            }

            .btn-close {
                background-color: $white;
                border: 1px solid transparent;
                border-radius: 4px;
                right: 12px;
                top: 12px;

                &:focus {
                    background-color: $gray-200;
                    border-color: $gray-400;
                }
            }
        }
    }

    &-content {
        background: $blue-100;
        position: relative;
        display: flex;
        flex-direction: column;
        width: 100%;
        min-height: 100%;
        overflow-y: auto;
    }

    &-header {
        position: relative;
        padding-left: $container-padding-x;
        padding: 0 $container-padding-x 4px;

        h1 {
            padding: 25px 48px 0 0;
            margin: 0 0 1rem;
            font-size: calc(1.25rem + 1.5vw);

            small {
                display: block;
                font-weight: 400;
                font-size: 0.888rem;
                margin-top: 0.5rem;
            }
        }

        &.border-bottom {
            border-color: $blue-200;
        }
    }

    &-body {
        padding: 0 $container-padding-x $container-padding-x;

        .container__details {
            h2 {
                color: $black;
            }
        }
    }

    &-footer:not(:has(.btn-row--horizontal)) {
        display: flex;
        flex-wrap: wrap;
        flex-shrink: 0;
        align-items: center;
        justify-content: flex-end;
        padding: $alert-padding-x;
    }

    &-footer--sticky {
        border-top: 1px solid $blue-200;
        padding: 1rem 1.5rem 0;
        margin: 0 -1.5rem;

        button {
            margin-bottom: 0;
        }
    }

    &-backdrop {
        position: fixed;
        top: 0;
        left: 0;
        z-index: 10;
        width: 100vw;
        height: 100vh;
        background-color: $black;
        opacity: 0;
        visibility: hidden;
        transition: all 0.5s ease;
    }
}

.wrapper-sticky-footer {
    display: flex;
    flex-direction: column;
    // height: 100%;

    .flex-content {
        flex: 1 1 auto;
        overflow-y: scroll;
        scroll-behavior: smooth;
        // max-height: 1010px;
    }

    .modal-footer--sticky {
        flex-shrink: 0;
        box-sizing: border-box;
    }
}

.show-modal .modal--multistep-form {
    .modal-content {
        height: 66vh;

        .modal-header,
        .modal-footer {
            flex: 0 1 auto;
        }

        .modal-header {
            padding: 0 2rem;
        }
        .modal-body {
            flex: 1 1 auto;
            overflow-y: auto;
            scroll-behavior: smooth;
            padding: 0 2rem;
        }
        .modal-footer {
            padding: 1.15rem 2rem;
        }
    }

    .stap1 div.stap1,
    .stap2 div.stap2 {
        transition: all $transition-duration-default $transition-ease-default;
        opacity: 1;
        visibility: visible;
        display: block;
        transition-behavior: allow-discrete;
        transition-delay: $transition-duration-default;

        @starting-style {
            opacity: 0;
        }
    }

    .stap1 {
        .stap2 {
            opacity: 0;
            // transition: all $transition-duration-default $transition-ease-default;
            visibility: hidden;
            display: none;
            transition-behavior: allow-discrete;
            @starting-style {
                opacity: 1;
            }
        }
    }

    .stap2 {
        .stap1 {
            opacity: 0;
            // transition: all $transition-duration-default $transition-ease-default;
            visibility: hidden;
            display: none;
            transition-behavior: allow-discrete;
            @starting-style {
                opacity: 1;
            }
        }
    }

    .modal-footer {
        align-items: normal;
        justify-content: space-between;
        padding: 1rem;
    }
    .btn-row {
        display: flex;
        flex: 1;
        justify-content: space-between;

        .btn {
            width: auto;
            font-size: 0.889rem;
            margin-bottom: 0;

            &-textlink {
                color: $black;
            }
        }
    }
}

